--- a/example3.html
+++ b/example3.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>折线图(修复一bug)</title>
+		<title>折线图(到此一游)</title>
 		<script src="js/echarts.js"></script>
 		<script type="text/javascript" src="http://libs.baidu.com/jquery/1.9.1/jquery.js"></script>
 	</head>
